--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://vikasthakurr.github.io/Capstone_Project",
   "name": "cafe",
   "version": "0.1.0",
-  "private": true, 
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
